--- a/AVPlayerDemo/Base.lproj/Main.storyboard
+++ b/AVPlayerDemo/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,71 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2u6-eS-R1I">
+                                <rect key="frame" x="106" y="328.5" width="162" height="30"/>
+                                <state key="normal" title="AVPlayerViewController"/>
+                                <connections>
+                                    <action selector="showPlayerVC:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rOb-R2-u3C"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="COI-DA-zeB">
+                                <rect key="frame" x="156.5" y="245" width="61" height="30"/>
+                                <state key="normal" title="AVPlayer"/>
+                                <connections>
+                                    <action selector="playWithAVPlayer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CtC-RM-1fX"/>
+                                    <segue destination="UUS-zw-ln9" kind="show" id="PNs-Bh-dud"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="COI-DA-zeB" firstAttribute="centerX" secondItem="2u6-eS-R1I" secondAttribute="centerX" id="BJz-Wu-D6b"/>
+                            <constraint firstItem="2u6-eS-R1I" firstAttribute="top" secondItem="COI-DA-zeB" secondAttribute="bottom" constant="53.5" id="X8H-1T-GZh"/>
+                            <constraint firstItem="2u6-eS-R1I" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="Zay-ot-xaZ"/>
+                            <constraint firstItem="2u6-eS-R1I" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="iqx-xh-QeR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-25" y="81"/>
+        </scene>
+        <!--Player Demo View Controller-->
+        <scene sceneID="GZO-SD-FrU">
+            <objects>
+                <viewController id="UUS-zw-ln9" customClass="AVPlayerDemoViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6Tf-9c-eFY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4TL-NX-vom">
+                                <rect key="frame" x="16" y="44" width="34" height="30"/>
+                                <state key="normal" title="back"/>
+                                <connections>
+                                    <action selector="dismiss:" destination="UUS-zw-ln9" eventType="touchUpInside" id="7Bd-uX-8ze"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4TL-NX-vom" firstAttribute="leading" secondItem="o2a-ug-aiS" secondAttribute="leading" constant="16" id="Z30-El-usu"/>
+                            <constraint firstItem="4TL-NX-vom" firstAttribute="top" secondItem="o2a-ug-aiS" secondAttribute="top" constant="24" id="nQl-Pd-DqR"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="o2a-ug-aiS"/>
+                    </view>
+                    <connections>
+                        <outlet property="backBtn" destination="4TL-NX-vom" id="00M-py-drv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hQ7-Dg-MZd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="790" y="32"/>
         </scene>
     </scenes>
 </document>
